--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "homepage": "https://rawrington.github.io/SkillDisplay/",
+  "homepage": "https://kfung95.github.io/SkillDisplay/",
   "browserslist": {
     "production": [
       ">0.2%",
